k8s-file/kubernetes/observability/41-jaeger.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger
  namespace: arealis-zord
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jaeger
  template:
    metadata:
      labels:
        app: jaeger
    spec:
      containers:
        - name: jaeger
          image: jaegertracing/all-in-one:1.53
          ports:
            - containerPort: 16686
            - containerPort: 14268
            - containerPort: 14250
---
apiVersion: v1
kind: Service
metadata:
  name: jaeger
  namespace: arealis-zord
spec:
  selector:
    app: jaeger
  ports:
    - name: ui
      port: 16686
      targetPort: 16686
    - name: collector-http
      port: 14268
      targetPort: 14268
    - name: collector-grpc
      port: 14250
      targetPort: 14250
