k8s-file/kubernetes/observability/42-otel-collector.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otel-collector
  namespace: arealis-zord
spec:
  replicas: 1
  selector:
    matchLabels:
      app: otel-collector
  template:
    metadata:
      labels:
        app: otel-collector
    spec:
      containers:
        - name: otel-collector
          image: otel/opentelemetry-collector-contrib:0.91.0
          args: ["--config=/etc/otelcol-contrib/otel-collector-config.yaml"]
          ports:
            - containerPort: 4317
            - containerPort: 4318
            - containerPort: 8888
            - containerPort: 8889
            - containerPort: 13133
          volumeMounts:
            - name: config
              mountPath: /etc/otelcol-contrib/otel-collector-config.yaml
              subPath: otel-collector-config.yaml
          readinessProbe:
            httpGet:
              path: /
              port: 13133
            initialDelaySeconds: 10
            periodSeconds: 5
      volumes:
        - name: config
          configMap:
            name: otel-collector-config
---
apiVersion: v1
kind: Service
metadata:
  name: otel-collector
  namespace: arealis-zord
spec:
  selector:
    app: otel-collector
  ports:
    - name: otlp-grpc
      port: 4317
      targetPort: 4317
    - name: otlp-http
      port: 4318
      targetPort: 4318
    - name: metrics
      port: 8888
      targetPort: 8888
    - name: prom-export
      port: 8889
      targetPort: 8889
    - name: health
      port: 13133
      targetPort: 13133
