k8s-file/kubernetes/observability/44-loki.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loki
  namespace: arealis-zord
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loki
  template:
    metadata:
      labels:
        app: loki
    spec:
      containers:
        - name: loki
          image: grafana/loki:2.9.0
          args: ["-config.file=/etc/loki/local-config.yaml"]
          ports:
            - containerPort: 3100
          volumeMounts:
            - name: config
              mountPath: /etc/loki/local-config.yaml
              subPath: local-config.yaml
            - name: data
              mountPath: /loki
      volumes:
        - name: config
          configMap:
            name: loki-config
        - name: data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: loki
  namespace: arealis-zord
spec:
  selector:
    app: loki
  ports:
    - name: http
      port: 3100
      targetPort: 3100
